2048/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    name: 2048-game
