2048/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
  namespace: game-2048
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: game-2048
          image: jithendar/2048:latest  # Use your actual Docker image name and tag
          ports:
            - containerPort: 3000  # The port your React app is listening on
          imagePullPolicy: Always
