2048/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048
  namespace: game-2048
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80  # The port exposed by the service within the cluster
      targetPort: 3000  # The port your React app is listening on inside the pod
  type: ClusterIP
